fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -554,8 +554,16 @@ footer ul li {
   .title-card {
     position: static;
   }
+
+  .title-card h1 {
+    font-size: 40px;
+  }
   .large-titles {
     display: none;
+  }
+
+  .listings-container {
+    margin-top: 50px;
   }
 
   .menu-icon {
